ui/src/shared/components/lightbox/LightBox.css
.lightbox-backdrop {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  position: fixed;
  z-index: var(--dialog-popup-z-index); /* Sit on top */
  left: 0;
  top: 0;
  background-color: rgba(60, 60, 60, 0.95);
  overflow-x: hidden; /* Disable horizontal scroll */

  .lightbox-image-container {
    position: relative;
  }

  .fadeout {
    transition: opacity 1s cubic-bezier(0.45, 1.005, 0, 1.005);
    opacity: 0;
    transition-delay: 2s;
  }

  img {
    max-height: 97dvh;
    max-width: 98dvw;
    object-fit: scale-down;
  }

  .prev,
  .next {
    display: flex;
    align-items: center;
    position: absolute;
    top: 0;
    height: 100%;
    width: 40%;
    text-decoration: none;
    user-select: none;
    z-index: var(--dialog-popup-z-index); /* Sit on top */
  }

  button.prev,
  button.next,
  button.close {
    &:focus-visible {
      outline: none;
    }
  }

  .prev .icon,
  .next .icon,
  .close .icon {
    stroke: var(--grey-60);
    width: 40px;
    height: 40px;
    background: rgba(50, 50, 50, 0.6);
    border-radius: 20px;
  }

  .next {
    justify-content: right;
    right: 10px;
  }

  .prev {
    justify-content: left;
    left: 10px;
  }

  .close {
    position: absolute;
    top: 0;
    right: 0;
    padding: 10px 10px 20px 20px;
    text-decoration: none;
    z-index: calc(var(--dialog-popup-z-index) + 1); /* Sit on top */
  }

  .prev:hover,
  .next:hover,
  .close:hover {
    .icon {
      stroke: white;
    }
    cursor: pointer;
  }

  .image-info {
    position: absolute;
    text-align: center;
    font-size: 1rem;
    padding-block: 5px;
    bottom: 0%;
    width: 100%;
    height: auto;
    color: var(--grey-925);
    background: rgba(50, 50, 50, 0.6);
  }

  .preload {
    display: none;
  }
}

